--- a/.github/workflows/bash-build.yml
+++ b/.github/workflows/bash-build.yml
@@ -47,4 +47,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: artifact
-          path: ${{ env.workdir }}/*.pkg.tar.zst
+          path: ${{ env.workdir }}/src/*.pkg.tar.zst
